# HMChefApp

./: .env.example  .gitignore  .gitmodules  Dockerfile  README.md  app.json  docker-compose.yml  eas.json  eslint.config.mjs  package-lock.json  package.json
.github/workflows/: deploy.yml  linting.yml
app/: _layout.tsx
app/(tabs)/: My Recipes.tsx  New Recipe.tsx  Search.tsx  Settings.tsx  _layout.tsx  home.tsx  index.tsx  search.tsx
backend/: pyproject.toml
backend/app/internal/: settings.py
components/: AppInput.tsx  Recipes.tsx
context/: AuthContext.tsx  AuthState.tsx  RecipeContext.tsx
hmchefapp/: app.json  package-lock.json
hmchefapp/app/: _layout.tsx
hmchefapp/app/(tabs)/: New Recipe.tsx  Settings.tsx  index.tsx
hmchefapp/components/: Recipes.tsx
