[project]
name = "backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115.12",
    "pydantic-settings>=2.8.1",
    "python-jwt>=4.1.0",
    "redis>=5.2.1",
]

[project.scripts]
serve  = "uvicorn controller:app --host 0.0.0.0 --port 8000 --workers 1 --reload"
